--- a/src/pages/admin.html
+++ b/src/pages/admin.html
@@ -7,7 +7,7 @@
 		<link rel="mask-icon" href="/images/safari-pinned-tab.svg?v=M44lzPylqQ" color="#000000">
         <link href="/admin/config.yml" type="text/yaml" rel="cms-config-url" />
 		<title>Admin</title>  
-        <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+        <script type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 	</head>
 	<body>
         <script src="https://unpkg.com/decap-cms@^3.1.2/dist/decap-cms.js"></script>
