--- a/src/pages/admin.html
+++ b/src/pages/admin.html
@@ -1,62 +1,17 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>GitHub Authentication Example</title>
+<!doctype html>
+<html lang="pl">
+	<head>
+		<meta charset="UTF-8" />
+		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" href="/favicon.png" type="image/png">	
+		<link rel="mask-icon" href="/images/safari-pinned-tab.svg?v=M44lzPylqQ" color="#000000">
+        <link href="/admin/config.yml" type="text/yaml" rel="cms-config-url" />
+		<title>Admin</title>  
+        <script type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+		<script src="https://unpkg.com/netlify-auth-providers"></script>
 
-    <!-- Make sure to include Netlify’s authentication library -->
-    <!-- Also available from npm as netlify-auth-providers -->
-    <script src="https://unpkg.com/netlify-auth-providers"></script>
-  </head>
-  <body>
-    <h1>GitHub Authentication Example:</h1>
-    <p><a href="#" id="login">Authenticate</a></p>
-    <p>Token: <span id="output-token">Not authenticated yet</span></p>
-    <p>
-      User emails:
-      <span id="output-email">Not authenticated yet</span>
-    </p>
-
-    <script>
-      const anchorTag = document.getElementById("login");
-      const outputToken = document.getElementById("output-token");
-      const outputEmail = document.getElementById("output-email");
-
-      anchorTag.addEventListener("click", (event) => {
-        event.preventDefault();
-
-        const authenticator = new netlify.default({});
-
-        authenticator.authenticate(
-          // Set the OAuth provider and token scope
-          // Provider can be "github", "gitlab", or "bitbucket"
-          // The scopes available depend on your OAuth provider
-          { provider: "github", scope: "user" },
-          async function (error, data) {
-            if (error) {
-              outputToken.innerText =
-                "Error Authenticating with GitHub: " + error;
-            } else {
-              outputToken.innerText =
-                "Authenticated with GitHub. Access Token: " +
-                data.token;
-              outputEmail.innerText = await loadGitHubUserEmails(
-                data.token
-              );
-            }
-          }
-        );
-      });
-
-      async function loadGitHubUserEmails(token) {
-        return await fetch("https://api.github.com/user/emails", {
-          headers: {
-            Accept: "application/vnd.github.v3+json",
-            Authorization: `token ${token}`,
-          },
-        })
-          .then((response) => response.json())
-          .then((response) => JSON.stringify(response));
-      }
-    </script>
-  </body>
+	</head>
+	<body>
+        <script src="https://unpkg.com/decap-cms@^3.1.2/dist/decap-cms.js"></script>
+	</body>
 </html>
